favicon and titles to links added

--- a/about.html
+++ b/about.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>K🇺🇦T About</title>
+    <title>Portfolio - Kateryna Tsygankova Front End Developer Ukraine</title>
+    <link rel="shortcut icon" type="image/jpg" href="/images/ukraine.png" />
+    <meta
+      name="description"
+      content="Kateryna Tsygankova, front-end developer from Ukraine based in Sweden. Project portfolio. Open for new offers"
+    />
     <!-- bootstrap css -->
     <link
       rel="stylesheet"
@@ -31,18 +36,28 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="/index.html"
+          <a class="navbar-brand" href="/index.html" title="main page"
             ><span class="logo bold">K🇺🇦T</span></a
           >
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Home</a>
+              <a class="nav-link" href="/index.html" title="main page">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/about.html">About</a>
+              <a
+                class="nav-link active"
+                href="/about.html"
+                title="portfolio page"
+                >About</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#contactme">Contact me</a>
+              <a
+                class="nav-link"
+                href="/about.html#contactme"
+                title="contact information"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -94,6 +109,7 @@
               ><a
                 class="contact-link"
                 href="mailto:kateryna.tsygankova@gmail.com"
+                title="Kateryna Tsygankova email"
                 >kateryna.tsygankova@gmail.com</a
               >
             </p>
@@ -104,6 +120,7 @@
               <a
                 class="contact-link"
                 href="https://www.facebook.com/kateryna.tsygankova"
+                title="Facebook Kateryna Tsygankova"
                 target="_blank"
                 >Kateryna Tsygankova</a
               >
@@ -115,6 +132,7 @@
               <a
                 class="contact-link"
                 href="https://www.linkedin.com/in/kateryna-tsygankova-15a429244"
+                title="LinkedIn page of Kateryna Tsygankova"
                 target="_blank"
                 >Kateryna Tsygankova</a
               >
