--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>K🇺🇦T Home</title>
+    <title>Home - Kateryna Tsygankova Front End Developer Ukraine</title>
+    <link rel="shortcut icon" type="image/jpg" href="/images/ukraine.png" />
+    <meta
+      name="description"
+      content="Kateryna Tsygankova, frontend developer from Ukraine basing in Sweden"
+    />
     <!-- bootstrap css -->
     <link
       rel="stylesheet"
@@ -36,13 +41,22 @@
           >
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" href="/index.html">Home</a>
+              <a class="nav-link active" href="/index.html" title="main page"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/about.html" title="portfolio page"
+                >About</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#contactme">Contact me</a>
+              <a
+                class="nav-link"
+                href="/about.html#contactme"
+                title="contact information"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -53,10 +67,14 @@
       <h3 class="opacity">🇺🇦 front end developer based in Sweden 🇸🇪</h3>
       <section class="buttons-container">
         <div class="button button-text">
-          <a href="/about.html">About me</a>
+          <a href="/about.html" title="Projects portfolio"
+            >Projects portfolio</a
+          >
         </div>
         <div class="button button-text">
-          <a href="/about.html#contactme">Contact me</a>
+          <a href="/about.html#contactme" title="contact information"
+            >Contact me</a
+          >
         </div>
       </section>
 
