responsiveness features added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/jpg" href="/images/ukraine.png" />
     <meta
       name="description"
-      content="Kateryna Tsygankova, frontend developer from Ukraine basing in Sweden"
+      content="Kateryna Tsygankova, frontend developer from Ukraine basing in Sweden. Sites. Apps. Landings. Personal and busiiness web pages."
     />
     <!-- bootstrap css -->
     <link
@@ -54,7 +54,7 @@
               <a
                 class="nav-link"
                 href="/about.html#contactme"
-                title="contact information"
+                title="contact information section"
                 >Contact me</a
               >
             </li>
@@ -62,14 +62,14 @@
         </div>
       </nav>
 
-      <h2>👋 Hi! I am</h2>
+      <h2 class="greeting">👋 Hi! I am</h2>
       <h1 class="name-heading">Kateryna Tsygankova</h1>
-      <h3 class="opacity">🇺🇦 front end developer based in Sweden 🇸🇪</h3>
+      <h3 class="opacity me-description">
+        🇺🇦 front end developer based in Sweden 🇸🇪
+      </h3>
       <section class="buttons-container">
         <div class="button button-text">
-          <a href="/about.html" title="Projects portfolio"
-            >Projects portfolio</a
-          >
+          <a href="/about.html" title="Information about me">About me</a>
         </div>
         <div class="button button-text">
           <a href="/about.html#contactme" title="contact information"
@@ -79,15 +79,15 @@
       </section>
 
       <div class="portfolio-container-home">
-        <div class="row">
-          <div class="col-sm-5 project-block radiused">
+        <div class="row mx-auto">
+          <div class="col project-block project-image-container radiused">
             <img
               class="portfolio-index-image radiused"
               src="/images/yoga.png"
               alt="yoga project"
             />
           </div>
-          <div class="col-sm-5 project-block radiused">
+          <div class="col project-block radiused">
             <h2>Yoga Project</h2>
             <p class="portfolio-text paddings">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
@@ -95,11 +95,13 @@
               iusto eum vitae dolorum voluptates dolores doloremque, eaque
               suscipit repudiandae voluptate fugit.
             </p>
-            <button class="button button-text">See More</button>
+            <button class="button button-text mx-auto project-button">
+              See More
+            </button>
           </div>
         </div>
-        <div class="row">
-          <div class="col-sm-5 project-block radiused">
+        <div class="row mx-auto">
+          <div class="col project-block radiused">
             <h2>Weather Project</h2>
             <p class="portfolio-text paddings">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
@@ -107,9 +109,9 @@
               iusto eum vitae dolorum voluptates dolores doloremque, eaque
               suscipit repudiandae voluptate fugit.
             </p>
-            <button class="button button-text">See More</button>
+            <button class="button button-text project-button">See More</button>
           </div>
-          <div class="col-sm-5 project-block radiused">
+          <div class="col project-block project-image-container radiused">
             <img
               class="portfolio-index-image radiused"
               src="/images/weather.png"
@@ -117,15 +119,15 @@
             />
           </div>
         </div>
-        <div class="row">
-          <div class="col-sm-5 project-block radiused">
+        <div class="row mx-auto">
+          <div class="col project-block project-image-container radiused">
             <img
               class="portfolio-index-image radiused"
               src="/images/yogurt.png"
               alt="yogurt project"
             />
           </div>
-          <div class="col-sm-5 project-block radiused">
+          <div class="col project-block radiused">
             <h2>Yogurt Project</h2>
             <p class="portfolio-text paddings">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
@@ -133,7 +135,7 @@
               iusto eum vitae dolorum voluptates dolores doloremque, eaque
               suscipit repudiandae voluptate fugit.
             </p>
-            <button class="button button-text">See More</button>
+            <button class="button button-text project-button">See More</button>
           </div>
         </div>
       </div>
