--- a/about.html
+++ b/about.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio - Kateryna Tsygankova Front End Developer Ukraine</title>
+    <title>About me - Kateryna Tsygankova Front End Developer Ukraine</title>
     <link rel="shortcut icon" type="image/jpg" href="/images/ukraine.png" />
     <meta
       name="description"
-      content="Kateryna Tsygankova, front-end developer from Ukraine based in Sweden. Project portfolio. Open for new offers"
+      content="Kateryna Tsygankova, front-end developer from Ukraine based in Sweden. Personal and contact information"
     />
     <!-- bootstrap css -->
     <link
@@ -47,7 +47,7 @@
               <a
                 class="nav-link active"
                 href="/about.html"
-                title="portfolio page"
+                title="About me page"
                 >About</a
               >
             </li>
@@ -67,7 +67,7 @@
         <h3 class="opacity">🇺🇦 front end developer based in Sweden 🇸🇪</h3>
       </div>
       <div class="text-container">
-        <p>
+        <p class="portfolio-text">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis,
           dicta quasi quidem suscipit voluptatum inventore at vero. Consequatur
           eius aspernatur nisi architecto sequi similique iure sed alias.
@@ -80,6 +80,7 @@
             <img
               class="portfolio-about-image radiused shadow paddings"
               src="/images/yoga.png"
+              width="300"
               alt="yoga project"
             />
           </div>
@@ -87,6 +88,7 @@
             <img
               class="portfolio-about-image radiused shadow paddings"
               src="/images/weather.png"
+              width="300"
               alt="weather project"
             />
           </div>
@@ -94,6 +96,7 @@
             <img
               class="portfolio-about-image radiused shadow paddings"
               src="/images/yogurt.png"
+              width="300"
               alt="yogurt project"
             />
           </div>
